# uk-invoice-generator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14438b1216ca_immutability_trigger_for_issued_.py  5f7da3d0e4dd_schema_company_clients_vat_rates_.py  de303147f0cb_seed_uk_vat_rates_effective_2011_01_04.py
backend/app/: main.py  models.py
backend/app/core/: config.py  db.py  errors.py  mixins.py  money.py  numbering.py  vat.py
backend/app/modules/clients/: models.py  router.py  schemas.py
backend/app/modules/company/: models.py  router.py  schemas.py
backend/app/modules/invoices/: immutability.py  models.py  router.py  schemas.py  service.py
backend/app/modules/numbering/: models.py
backend/app/modules/vat/: models.py  repository.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: conftest.py  test_clients_company.py  test_invoices.py
backend/tests/db/: conftest.py  test_numbering.py  test_vat_rates.py
backend/tests/unit/: test_model_validators.py  test_money.py  test_numbering_format.py  test_vat.py
docs/: ARCHITECTURE.md  INVOICING.md  MONEY.md  PHASE-PLAN.md  TESTING.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  clients.ts  company.ts  invoices.ts  types.ts
frontend/src/components/: ConfirmDialog.tsx  ErrorAlert.tsx  Field.tsx  Layout.tsx  StatusBadge.tsx  TotalsPanel.tsx
frontend/src/pages/: ClientForm.tsx  ClientsList.tsx  InvoiceEditor.test.tsx  InvoiceEditor.tsx  InvoiceView.tsx  InvoicesList.tsx  Settings.tsx
frontend/src/shared/: money.test.ts  money.ts  useLiveTotals.ts
prompts/: PROMPT-01.md  PROMPT-02.md  PROMPT-03.md  PROMPT-04.md  PROMPT-04A.md
