[project]
name = "uk-invoice-generator-backend"
version = "0.0.0"
description = "Backend for uk-invoice-generator (Phase 0 scaffold)"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "pydantic-settings",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # anyio's pytest plugin backs @pytest.mark.anyio. It currently arrives
    # transitively via httpx/starlette; pin it explicitly so a dependency
    # shuffle can never silently break async test collection.
    "anyio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts calls (Depends/Query/Path/Body) in
# argument defaults on purpose; they are not the mutable-default trap B008 warns
# about.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient warns that httpx is deprecated in favour of httpx2;
    # nothing we can act on until Starlette migrates. Silence to keep output clean.
    # Message-only match (its category is StarletteDeprecationWarning, not the
    # stdlib DeprecationWarning).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
